--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^11.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-router-dom": "^7.6.3",
     "tailwindcss": "^4.1.11"
   },
