--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@tailwindcss/vite": "^4.1.11",
     "dotenv": "^17.2.1",
     "firebase": "^11.10.0",
+    "formik": "^2.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0-rc.2",
     "react-router-dom": "^7.6.3",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
