--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-leaflet": "^5.0.0-rc.2",
     "react-router-dom": "^7.6.3",
     "sweetalert2": "^11.22.2",
